--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,12 @@ $theme-colors: (
 );
 
 @import "~bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,200;0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+
+body {
+    font-family: 'Exo 2', sans-serif;
+    font-size: 13px;
+}
 
 .modal-content {
     button {
