--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -38,3 +38,13 @@ body {
 .web3modal-modal-card{
     display: block !important;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance:textfield;
+}
