ref(components): changes option list style and rm main content

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,6 +10,7 @@ $theme-colors: (
 body {
     font-family: 'Exo 2', sans-serif;
     font-size: 13px;
+    background: #fafafa;
 }
 
 .modal-content {
